src/_layouts/index.scss
$font-path: '/assets/fonts/Atkinson/';

@import '../_includes/mixins.scss';
@import '../_includes/nav-styles.scss';

@font-face {
  font-family: Atkinson;
  src: url($font-path + 'Atkinson-Hyperlegible-Regular.woff2'),
    url($font-path + 'Atkinson-Hyperlegible-Regular.woff'),
    url($font-path + 'Atkinson-Hyperlegible-Regular.ttf');
  font-display: swap;
}

@font-face {
  font-family: Atkinson;
  src: url($font-path + 'Atkinson-Hyperlegible-Italic.woff2'),
    url($font-path + 'Atkinson-Hyperlegible-Italic.woff'),
    url($font-path + 'Atkinson-Hyperlegible-Italic.ttf');
  font-style: italic;
  font-display: swap;
}

@font-face {
  font-family: Atkinson;
  src: url($font-path + 'Atkinson-Hyperlegible-Bold.woff2'),
    url($font-path + 'Atkinson-Hyperlegible-Bold.woff'),
    url($font-path + 'Atkinson-Hyperlegible-Bold.ttf');
  font-weight: bold;
  font-display: swap;
}

@font-face {
  font-family: Atkinson;
  src: url($font-path + 'Atkinson-Hyperlegible-BoldItalic.woff2'),
    url($font-path + 'Atkinson-Hyperlegible-BoldItalic.woff'),
    url($font-path + 'Atkinson-Hyperlegible-BoldItalic.ttf');
  font-weight: bold;
  font-style: italic;
  font-display: swap;
}

:root {
  --default-fonts: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
    Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
  --body-font: Atkinson, 'Open Sans', var(--default-fonts);
  --header-font: rigid-square, 'Fira Code', monospace, var(--default-fonts);

  --body-color-dark: #311b00;
  --body-color: #5f4b32;
  --body-color-2: #948067;
  --bg-color: #f9f1db;
  --bg-color-2: #d9c7ab;
  --green: #24ac6c;
  --green-faded: #5fb88e;
  --section-color: var(--green);
  --purple: #7931e3;
  --red: #e46a4e;
  --red-faded: #e07c64;
  --red-dim: #e4694e71;

  --content-max-width: 1300px;
  --nav-height: 70px;
  --me-font-size: 22px;

  --nav-anim-duration: 500ms;
  // used in JS to decide whether the primary nav
  // should be automatically expanded
  --mobile-breakpoint: #{$mobile-breakpoint};
}

@media (max-width: 850px) {
  :root {
    --nav-height: 60px;
  }
}

* {
  box-sizing: border-box;
}

html {
  font-family: var(--body-font);
  line-height: 1.4;
  font-size: var(--me-font-size);
  color: var(--body-color);
  background: var(--bg-color);
}

hr {
  background: var(--bg-color-2);
  border: none;
  height: 2px;
}

h1,
h2 {
  @include header;
}

h1 {
  font-weight: bold;
}

h2.numbered {
  @include numbered-header;
}

h3 {
  @include subheader;
  margin-top: 15px;
  margin-bottom: 15px;
}

h4 {
  @include subheader;
  font-size: 36px;
  margin-bottom: 10px;
}

a,
a:visited {
  color: var(--section-color);
  text-decoration: underline dashed;
  cursor: pointer;
  transition: opacity 0.2s;

  > * {
    pointer-events: none;
  }
}

a:hover {
  opacity: 0.4;
}

#loading-spinner {
  opacity: 0;
  position: fixed;
  top: var(--nav-height);
  left: 0;
  width: 100%;
  transition: opacity 0.3s;

  &.loading {
    opacity: 1;
  }

  .loading-spinner__graphic {
    margin: auto;
    background: var(--bg-color);
    width: 80px;
    height: 20px;
    display: flex;
    justify-content: space-around;

    .loading-spinner__graphic--dash {
      height: 6px;
      width: 20px;
      background: var(--color);
      animation: highlight 600ms ease-in-out infinite;

      &:first-child {
        --color: var(--green);
      }

      &:nth-child(2) {
        --color: var(--red);
        animation-delay: 100ms;
      }

      &:nth-child(3) {
        --color: var(--purple);
        animation-delay: 200ms;
      }

      @keyframes highlight {
        0%,
        100% {
          transform: scaleX(1);
          background-color: var(--bg-color-2);
        }
        50% {
          transform: scaleX(1.1);
          background-color: var(--color);
        }
      }
    }
  }
}

.visually-hidden {
  visibility: hidden !important;
}

.macintosh {
  position: relative;

  > img {
    width: 100%;
  }

  .macintosh__img-container {
    position: absolute;
    top: 11.5%;
    left: 11%;
    width: 78%;
    overflow: hidden;

    > img,
    > video {
      width: 100%;
      height: auto;
      transform-origin: bottom center;
      background: #333;
    }

    &::before {
      content: '';
      position: absolute;
      width: 100%;
      height: 2px;
      background: rgba(0, 0, 0, 0.2);
      z-index: 1;
      animation: macintosh-scan-line 4s linear infinite;
    }

    &::after {
      content: '';
      position: absolute;
      top: 0;
      left: 0;
      right: 0;
      bottom: 0;
      background: radial-gradient(transparent 0%, rgba(49, 25, 2, 0.2)),
        linear-gradient(transparent, rgba(0, 0, 0, 0.05)) repeat;
      background-size: 100% 100%, 100% 1%;
    }

    @keyframes macintosh-scan-line {
      from {
        top: 0%;
        opacity: 1;
      }
      to {
        top: 100%;
        opacity: 0.1;
      }
    }
  }
}

.img-link {
  --color: var(--section-color);
  text-decoration: none;

  .img-link__img-container {
    position: relative;

    > img,
    > video {
      width: 100%;
      transition: transform 0.5s;
    }
    &::after {
      content: '';
      position: absolute;
      top: 0;
      left: 0;
      bottom: 6px;
      right: 0;
      border-left: 10px solid var(--color);
      border-bottom: 10px solid var(--color);
      background: repeating-linear-gradient(
        45deg,
        var(--color) 0,
        var(--color) 25%,
        transparent 0%,
        transparent 50%
      );
      background-size: 50px 50px;
      background-position: 0 0;
      z-index: -1;
      transition: transform 0.5s;
      transform: translate(-6px, 6px);
    }
  }
  &:hover > .img-link__img-container {
    > img,
    > video {
      transform: translate(20px, -20px);
    }
    &::after {
      animation: stripe-anim 3s linear infinite;
    }
  }
}

.cta-link:hover,
.img-link:hover {
  opacity: 1;
}

.cta-link {
  position: relative;
  display: flex;
  align-items: center;
  justify-content: space-between;
  border: 3px solid var(--section-color);
  color: var(--section-color);
  @include subheader-font;
  font-size: inherit;
  padding: 10px;
  text-decoration: none;
  background: linear-gradient(
    90deg,
    var(--section-color) 0,
    var(--section-color) 50%,
    var(--bg-color) 50%,
    var(--bg-color) 100%
  );
  background-size: 200% 100%;
  background-position: 100% 0;
  transition: background-position 0.5s;
  margin: 0;
  margin-top: 50px;

  &::before {
    content: '';
    position: absolute;
    top: 3px;
    left: -9px;
    right: 3px;
    bottom: -9px;
    background: var(--section-color);
    z-index: -1;
    transition: transform 0.5s;
    transform-origin: left;
  }

  > svg {
    fill: var(--section-color);
    margin-left: 15px;
  }
}

.cta-link:hover,
.cta-link:focus,
.img-link:hover > .cta-link,
.img-link:focus > .cta-link {
  background-position: 0;
  color: var(--bg-color);

  &::before {
    transform: translate(6px, -3px) scaleX(0);
  }
  > svg {
    fill: var(--bg-color);
    transition: fill 0.2s;
    transition-delay: 0.3s;
  }
  &::after {
    --icon-color: var(--bg-color);
    transition: background-color 0.2s;
    transition-delay: 0.3s;
  }
}

body {
  margin: 0;
}

section {
  max-width: var(--content-max-width);
  margin: auto;
  padding-left: 80px;
  padding-right: 80px;
  padding-bottom: 200px;
  margin-top: 100px;

  @media (max-width: $tablet-breakpoint) {
    padding-left: 20px;
    padding-right: 20px;
  }

  @media (max-width: $mobile-breakpoint) {
    --content-max-width: 600px;
    margin-left: auto;
    margin-right: auto;
    padding-left: 20px;
    padding-right: 20px;

    font-size: 20px;

    h1,
    h2 {
      font-size: 64px;
      margin-top: 16px;
      margin-bottom: 16px;
    }

    h3 {
      font-size: 36px;
      margin-top: 10px;
      margin-bottom: 10px;
    }

    h4 {
      font-size: 30px;
    }
  }
}

button {
  font-size: inherit;
  background: none;
  border: none;
  font-family: var(--header-font);
  color: var(--body-color);
  cursor: pointer;

  * {
    pointer-events: none;
  }
}

[data-page] {
  counter-reset: section-number;

  &.slideOut,
  &.slideIn {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    overflow: hidden;
    animation-duration: var(--nav-anim-duration);
    animation-timing-function: cubic-bezier(0.17, 0.84, 0.44, 1);
  }
  &.slideIn {
    animation-name: slidePageIn;
  }
  &.slideOut {
    animation-name: slidePageOut;
  }
}

body > [data-page] > footer {
  margin-top: 140px;
  background: #f2e9cd;
  padding-top: 48px;
  padding-bottom: 60px;
  // TODO: figure out why I need this
  // It's the only way to fix the CTA-link ::before
  position: relative;
  z-index: 0;

  .content {
    margin: auto;
    max-width: 900px;
    width: 100%;
    font-size: 20px;
    display: flex;
    align-items: flex-start;
    justify-content: space-between;
    padding: 20px;

    @include mobile {
      flex-direction: column;
      align-items: center;
      font-size: 18px;
    }
  }

  .newsletter {
    position: relative;
    z-index: 0;
    padding: 24px;
    margin-top: -100px;
    margin-bottom: 30px;
    max-width: 400px;
    h2 {
      @include subheader-font;
      margin-top: 10px;
      font-size: 40px;

      @include mobile {
        font-size: 36px;
      }
    }
    background: var(--bg-color);
    border: 2px solid var(--body-color-2);

    form {
      --section-color: var(--red);
      label {
        @include subheader-font;
        font-size: 18px;
      }
      .cta-link {
        width: 100%;
        margin-bottom: 20px;
        font-size: inherit;
        margin-top: 30px;

        @include mobile {
          font-size: 18px;
          padding: 7px;

          svg {
            height: 24px;
            margin: 0;
          }
        }
      }
      input {
        display: block;
        background: none;
        border: none;
        border-bottom: 2px solid var(--bg-color-2);
        width: 100%;
        margin-top: 15px;
        margin-bottom: 16px;
        padding-bottom: 10px;
        font-size: 20px;
        font-family: inherit;

        transition: border-color 0.3s;

        &:focus {
          outline: none;
          border-bottom-color: var(--section-color);
        }
      }
      .newsletter__never-spam {
        font-style: italic;
        font-size: 16px;
      }
    }
  }
  .socials {
    max-width: 340px;

    @include mobile {
      max-width: 400px;
    }
    .socials__links {
      display: flex;
      align-items: baseline;
      a + a {
        margin-left: 24px;
      }
    }
    p {
      font-style: italic;
    }
  }
}

@keyframes slidePageIn {
  from {
    transform: translateY(50vh);
    opacity: 0;
  }
  to {
    transform: translateY(0);
    opacity: 1;
  }
}

@keyframes slidePageOut {
  from {
    transform: translateY(0);
    opacity: 1;
  }
  to {
    transform: translateY(-50vh);
    opacity: 0;
  }
}

